examples/bugtest.grg
actions bugtest;// using Firm;

rule ReUsedEdges {
	pattern {
		node (x,y,z): Node;
		a: Node;
		b: Node;
		c: Node;
		x -e:Edge-> y; //ok
//		x -e-> y;      //duplicate error
//		x -e-> y;      //error
	negative {
		x -e-> y;      //ok
//		x -e-> z;      //error
		a:Node;
	}
	}
	replace{
		x -e-> y;      //ok
//		x -e-> z;      //error
	}
}


/*
//All edges get coalesced.
//The pattern-anon with neg-anon is ok.
//e with f is wrong.
//pattern-anon with e/f should be wrong; or not?
//Fixed
rule bug12 {
  pattern {
    node (a, b):Node;
    a --> b;
  negative {
	a --> b;
	a -e:Edge-> b;
	a -f:Edge-> b;
  }
  }
  replace {
  }
}
*/

rule subgraph {
  pattern {
    a:Node;
  negative {
    a --> b:Node;
  }
  }
  replace {
  }
}
